# pandata

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: avro.rs  csv.rs  json.rs  lib.rs  main.rs  pandata.rs  parquet.rs  tsv.rs
tests/: conversion_tests.rs
