[package]
name = "pandata"
description = "A CLI tool for converting data"
version = "0.1.0"
authors = ["Zach Miller <zach@zjmil.org>"]
repository = "https://github.com/zjmil/pandata"
license = "MIT"
readme = "README.md"
keywords = ["data", "cli", "conversion", "formats"]
categories = ["command-line-utilities", "data-structures", "parsing"]
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.9.0"
clap = { version = "4.5.21", features = ["derive"] }
polars = { version = "0.44.2", features = ["lazy", "streaming", "cloud_write", "ipc"] }
polars-plan = "0.44.2"

[features]
default = ["all"]
csv = ["polars/csv"]
json = ["polars/json"]
parquet = ["polars/parquet"]
tsv = ["csv"]
avro = ["polars/avro"]
all = ["csv", "json", "parquet", "tsv", "avro"]
